Did the content and styling for work and education. Looks good. Redid the paragraphs to make them way more responsive to resizing. found a bug  where if the screen is too small then the contact isn't highlighted. Need to fix the strong tags.

--- a/style.sass
+++ b/style.sass
@@ -7,6 +7,24 @@ body
   font-size: 1.5em
   color: #414141
   margin: 0
+  .educationSection, .workSection
+    p
+      text-align: center
+    p.title
+      font-size: 1.3em
+      font-weight: bold
+      letter-spacing: 4px
+    p.subTitle
+      color: #515151
+      font-weight: lighter
+      letter-spacing: 3px
+    p.date
+      letter-spacing: 2px
+    hr
+      border-bottom: 2px solid #58895c
+      width: 20%
+  p.textSection
+      text-align: justify
   .contactContainer
       color: white
       padding-top: 250px
@@ -24,17 +42,20 @@ body
     padding-right: 100px
     text-align: center
     img
-      transition: ease .5s
+      transition: ease-in-out .5s
       size: 500px
       width: 120px
       display: inline-block
-      padding: 20px
+      margin: 20px
+      //padding: 20px
       border-radius: 210px
-      margin: auto
+      //margin: auto
 
     img:hover
+      transform: scale(1.2)
       transition: ease .5s
-      border-radius: 0px
+      //border-radius: 0px
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7)
 
     p
       color: white
@@ -47,9 +68,10 @@ body
       font-family: 'Sans-Open', sans-serif
       text-align: left
       line-height: 1.8
-      width: auto
-      font-size: 1em
-      margin: 0 230px
+      max-width: 800px
+      margin: auto
+      //width: auto
+      //margin: 0 230px
       padding-bottom: 1em
       text-decoration: none
       //display: inline-block
@@ -59,29 +81,35 @@ body
   p
     text-align: justify
     line-height: 1.3
-    width: auto
-    margin: 0 230
+    max-width: 800px
+    margin: auto
+    //width: auto
+    //margin: 0 230
     padding-bottom: 1em
   #personalScroll
     text-transform: uppercase
-    font-size: 2em
-    margin-left: 200
-    margin-right: 200
+    font-size: 1em
+    max-width: 800px
+    margin: auto
+    // margin-left: 200
+    // margin-right: 200
   strong
+    max-width: 800px
+    margin: auto
     text-transform: uppercase
     font-size: 2em
-    margin-left: 200
-    margin-right: 200
+    //margin-left: 200
+    //margin-right: 200
 
 
   header
     nav
-      background: url('images/topbar2.svg')
+      background: url('images/topbar3.svg')
       position: fixed
       margin: 0
-      margin-top: -500px
+      margin-top: -200px
       padding: 0
-      padding-bottom: 300px
+      padding-bottom: 0px
       font-size: 1.2em
       height: 560px
       width: 2400px
@@ -90,7 +118,7 @@ body
       //background-color: black
       //display: block
       .container
-        margin-top: 500px
+        margin-top: 200px
 
         ul
           list-style-type: none
@@ -122,7 +150,7 @@ body
             &:hover
               color: #00ff00
   .container2
-    padding-top: 270px
+    padding-top: 200px
     h1
       width: auto
       align-content: center
